<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- 项目基本信息 -->
    <groupId>com.jwcode</groupId>
    <artifactId>jwcode</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>JWCode</name>
    <description>JWCode - Java 终端 AI 编码工具</description>
    <url>https://github.com/your-org/jwcode</url>

    <!-- 开发者信息 -->
    <developers>
        <developer>
            <name>JWCode Team</name>
            <email>team@jwcode.com</email>
            <organization>JWCode</organization>
        </developer>
    </developers>

    <!-- 许可证 -->
    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <!-- SCM 配置 -->
    <scm>
        <connection>scm:git:git://github.com/your-org/jwcode.git</connection>
        <developerConnection>scm:git:ssh://github.com:your-org/jwcode.git</developerConnection>
        <url>https://github.com/your-org/jwcode/tree/main</url>
    </scm>

    <!-- 属性定义 -->
    <properties>
        <!-- Java 版本 -->
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- 依赖版本 -->
        <jackson.version>2.17.0</jackson.version>
        <slf4j.version>2.0.13</slf4j.version>
        <logback.version>1.5.6</logback.version>
        <lombok.version>1.18.32</lombok.version>
        <junit.version>5.10.2</junit.version>
        <mockito.version>5.11.0</mockito.version>
        <picocli.version>4.7.6</picocli.version>
        <jline.version>3.26.0</jline.version>
        <okhttp.version>4.12.0</okhttp.version>
        <guava.version>33.1.0-jre</guava.version>
        <guice.version>7.0.0</guice.version>
        <commons.lang3.version>3.14.0</commons.lang3.version>
        <commons.io.version>2.16.1</commons.io.version>
        <reactor.version>3.6.6</reactor.version>
        <jsonschema.version>4.35.0</jsonschema.version>
        <java.websocket.version>1.5.6</java.websocket.version>
        <snakeyaml.version>2.2</snakeyaml.version>
    </properties>

    <!-- 依赖管理 -->
    <dependencyManagement>
        <dependencies>
            <!-- JWCode 内部模块 -->
            <dependency>
                <groupId>com.jwcode</groupId>
                <artifactId>jwcode-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.jwcode</groupId>
                <artifactId>jwcode-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.jwcode</groupId>
                <artifactId>jwcode-cli</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.jwcode</groupId>
                <artifactId>jwcode-repl</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.jwcode</groupId>
                <artifactId>jwcode-sdk</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.jwcode</groupId>
                <artifactId>jwcode-mcp</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.jwcode</groupId>
                <artifactId>jwcode-plugin</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.jwcode</groupId>
                <artifactId>jwcode-skill</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.jwcode</groupId>
                <artifactId>jwcode-lsp</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.jwcode</groupId>
                <artifactId>jwcode-analytics</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Jackson JSON 处理 -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-jsr310</artifactId>
                <version>${jackson.version}</version>
            </dependency>

            <!-- 日志 -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>

            <!-- Lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- 命令行解析 -->
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>${picocli.version}</version>
            </dependency>

            <!-- 终端 UI -->
            <dependency>
                <groupId>org.jline</groupId>
                <artifactId>jline</artifactId>
                <version>${jline.version}</version>
            </dependency>

            <!-- HTTP 客户端 -->
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>${okhttp.version}</version>
            </dependency>

            <!-- Google Guava -->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>

            <!-- Apache Commons -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons.lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons.io.version}</version>
            </dependency>

            <!-- 响应式编程 -->
            <dependency>
                <groupId>io.projectreactor</groupId>
                <artifactId>reactor-core</artifactId>
                <version>${reactor.version}</version>
            </dependency>

            <!-- WebSocket -->
            <dependency>
                <groupId>org.java-websocket</groupId>
                <artifactId>Java-WebSocket</artifactId>
                <version>${java.websocket.version}</version>
            </dependency>

            <!-- YAML 解析 -->
            <dependency>
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>${snakeyaml.version}</version>
            </dependency>

            <!-- 测试依赖 -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- 构建配置 -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!-- 子模块 -->
    <modules>
        <module>jwcode-parent</module>
    </modules>
</project>